# pypi_package_setuptools_template

./: .gitignore  README.md  pyproject.toml
